# weather_page

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: capitais.py  config.py  database.py  main.py  models.py  populacao.py  schemas.py
backend/app/routers/: capitais.py  comparativo.py  populacao.py  weather.py
dados/: populacao_residente.xlsx
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AggregatedChartSection.tsx  CityMarker.tsx  CitySelector.tsx  ComparativoBarsSection.tsx  CurrentWeatherCard.tsx  Footer.tsx  GlobeSection.tsx  Hero.tsx  HistoryChartSection.tsx  MapaSection.tsx  Navbar.tsx  PopulacaoChartSection.tsx
frontend/src/components/charts/: ParameterLineChart.tsx  PopulationBarChart.tsx
