[project]
name = "weather-page-backend"
version = "0.1.0"
description = "API FastAPI que le dados meteorologicos das capitais brasileiras (tabela silver.capitais_weather) para o frontend do weather_page"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.48",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.2.2",
]
